(PC-22260)[PRO] fix: sticky bar being under components at z-index 0

--- a/pro/src/components/ActionsBarSticky/ActionsBarSticky.module.scss
+++ b/pro/src/components/ActionsBarSticky/ActionsBarSticky.module.scss
@@ -4,6 +4,7 @@
 
 .actions-bar {
   position: fixed;
+  z-index: 1;
   left: 0;
   right: 0;
   bottom: 0;
